# back/auth/internal/domain/user/dtos/lgin.go
@@ -1,0 +1,6 @@
+package dtos
+
+type LoginRequest struct {
+	Email    string
+	Password string
+}
