# front/mylerida/src/domain/entities/user.ts
@@ -1,0 +1,8 @@
+
+export interface User {
+    id: number;
+    name: string;
+    email: string;
+    password: string;
+  }
+  
